<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.location.app.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_traverse_path"
        android:name="com.location.app.fragment.dashboard.DashboardFragment"
        android:label="@string/title_traverse_path"
        tools:layout="@layout/fragment_traverse_path" />

    <fragment
        android:id="@+id/navigation_place_beacon"
        android:name="com.location.app.fragment.notifications.NotificationsFragment"
        android:label="@string/title_place_beacon"
        tools:layout="@layout/fragment_place_beacon" />
</navigation>